welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.code
def parotTrouble(talking:Boolean, hour:Int):Boolean = {

if (hour>7 && hour<20){
	talking=false
	
}else{
	talking=true
	}
return true;
}